# qt5-node-editor

./: .travis.yml  CMakeLists.txt  LICENSE  README  README.rst  TODO  TODO.rst  edge.cpp  edge.hpp  graphicsbezieredge.cpp  graphicsbezieredge.hpp  graphicsnode.cpp  graphicsnode.hpp  graphicsnodedefs.hpp  graphicsnodescene.cpp  graphicsnodescene.hpp  graphicsnodesink.cpp  graphicsnodesink.hpp  graphicsnodesocket.cpp  graphicsnodesocket.hpp  graphicsnodesource.cpp  graphicsnodesource.hpp  graphicsnodeview.cpp  graphicsnodeview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  node.cpp  node.hpp  qobjectnode.cpp  qobjectnode.hpp  test_qobjects.cpp  test_qobjects.hpp
examples/simple-data-forwarding/: mainwindow.cpp
src/: CMakeLists.txt  connectmapper_p.cpp  connectmapper_p.hpp  edge.cpp  graphicsbezieredge.cpp  graphicsbezieredge.hpp  graphicsbezieredge_p.h  graphicsnode.cpp  graphicsnode.hpp  graphicsnode_p.h  graphicsnodescene.cpp  graphicsnodescene.hpp  graphicsnodesocket.cpp  graphicsnodesocket.hpp  graphicsnodesocket_p.h  graphicsnodeview.cpp  graphicsnodeview.hpp  modelnode.cpp  modelnode.hpp  qmodeldatalistdecoder.cpp  qmultimodeltree.cpp  qmultimodeltree.h  qnodeeditorsocketmodel.cpp  qnodeeditorsocketmodel.h  qnodeview.cpp  qnodeview.h  qnodewidget.cpp  qnodewidget.h  qobjectmodel.cpp  qobjectmodel.h  qobjectnode.cpp  qobjectnode.hpp  qreactiveproxymodel.cpp  qreactiveproxymodel.h  qtypecoloriserproxy.cpp  qtypecoloriserproxy.h
